Wed Aug 22 15:58:55 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * bin/msvc_static_order.lst:

          Added CIAO projects to the list. This may need further tweaking.
          Hopefully this will address problems in the
          WinXP_VC71_CIAOCore_Static_Debug build.         

Wed Aug 22 11:32:41 UTC 2007  Steve Huston  <shuston@riverace.com>

        * netsvcs/lib/Client_Logging_Handler.cpp: Fixed wide-char error.

Wed Aug 22 08:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Updated Remedy IT platforms

Wed Aug 22 08:49:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * m4/ace.m4:
          Removed support for disabling rtti

Wed Aug 22 08:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_mpc_auto_compile.pl:
        * bin/msvc_static_compile.pl:
          Use the word error when detecting an unknown option, this way the
          autobuild scripts will tag this as error on the scoreboard

Wed Aug 22 08:15:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_gnuwin32_common.GNU:
          -Wno-attributes is only available with GCC 4.x. Removed support
          for GCC 2.95

Wed Aug 22 06:23:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_gnuwin32_common.GNU:
          The GCC compiler on windows gives a lot of warnings about attributes
          that are ignored. These are not usefull, so added no_attributes
          which by default is set to 1 which then disable this warning. If you
          want to see these warnings, set no_attributes=0 to your
          platform_macros.GNU file

Wed Aug 22 04:53:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/HTBP/ping/run_test.pl:
        * protocols/tests/HTBP/Reactor_Tests/run_test.pl:
        * protocols/tests/HTBP/Send_Large_Msg/run_test.pl: